# Network-Master

./: .gitignore  Cargo.toml  Netzwerkliste_DB.mwb  README.md  build_reset.cmd  run.cmd  run_reset.cmd  run_seed_reset.cmd
backend/: Cargo.toml
backend/db_scripts/: down.sql  up.sql
backend/src/: lib.rs  main.rs  masterbase.rs  masterbase_error.rs  model.rs
backend/src/endpoints/: details.rs  device_kind.rs  dose.rs  gebaeude.rs  mod.rs  raum.rs  schrank.rs  switch.rs  switch_zu_dose.rs  switchport.rs
backend/static/dose/: script.js
backend/static/raum/: index.html  script.js  style.css
db_scripts/: down.sql  up.sql
frontend/: Cargo.toml  build.cmd  index.html
frontend/assets/: main.css  sidebar.css  tab.css
frontend/assets/css/: details.css  main.css  modal.css  sidebar.css  tab.css
frontend/src/: main.rs  model.rs  sidebar_component.rs  tab_component.rs  util.rs
frontend/src/details/: details_component.rs  mod.rs  raum_details_component.rs  schrank_details_component.rs  switch_component.rs  switch_details_component.rs
frontend/src/modal/: add_dose_component.rs  add_gebaeude_component.rs  add_raum_component.rs  add_schrank_component.rs  add_switch_component.rs  edit_dose_component.rs  edit_switchport_component.rs  mod.rs  modal_component.rs
frontend/src/sidebar/: add_menu.rs  gebaeude_component.rs  mod.rs  schrank_component.rs  sidebar_component.rs  tab_component.rs
migrations/2026-01-14-153314-0000_V1.0/: up.sql
src/: endpoints.rs  error.rs  main.rs  masterbase.rs  model.rs  schema.rs
static/: index.html  script.js  style.css
(+12 files in other folders)
