[package]
name = "network_master"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.3.5", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
dotenvy = "0.15.7"
rocket = { version = "0.5.1", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.149"
