[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
dotenvy = "0.15.7"
rocket = { version = "0.5.1", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
