[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
gloo-net = "0.6.0"
implicit-clone = "0.6.0"
serde = "1.0.228"
tokio = { version = "1.49.0", default-features = false, features = ["macros"] }
urlencoding = "2.1.3"
wasm-bindgen-futures = "0.4.58"
web-sys = { version = "0.3.85", features = ["Window"] }
yew = { version = "0.22.0", features = ["csr"] }
